--- a/package.json
+++ b/package.json
@@ -9,29 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mdx-js/react": "^3.1.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@types/node": "22.10.2",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "class-variance-authority": "^0.7.1",
-    "eslint-config-next": "15.1.2",
-    "eslint-config-prettier": "^9.1.0",
+    "motion": "^11.15.0",
     "next": "^15.1.2",
-    "next-mdx-remote": "^5.0.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
     "@tailwindcss/postcss": "^4.0.0-beta.8",
     "bright": "^0.8.6",
-    "eslint": "^9.17.0",
-    "eslint-plugin-prettier": "^5.2.1",
     "postcss": "^8.4.49",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^4.0.0-beta.8",
     "typescript": "^5.7.2"
   }
