--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@tailwindcss/postcss": "^4.0.0-beta.8",
     "bright": "^0.8.6",
     "postcss": "^8.4.49",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^4.0.0-beta.8",
     "typescript": "^5.7.2"
   }
