--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "class-variance-authority": "^0.7.1",
-    "motion": "^11.15.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.15.0",
     "next": "^15.1.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -25,6 +26,7 @@
     "@tailwindcss/postcss": "^4.0.0-beta.8",
     "bright": "^0.8.6",
     "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^4.0.0-beta.8",
     "typescript": "^5.7.2"
