--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-icons": "^1.3.2",
-    "@types/node": "22.10.2",
-    "@types/react": "19.0.2",
-    "@types/react-dom": "19.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
@@ -24,6 +22,9 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0-beta.8",
     "@trivago/prettier-plugin-sort-imports": "^5.2.0",
+    "@types/node": "^22.10.3",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "bright": "^0.8.6",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
